<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textViewJapanese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/japanese"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/textViewEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/textViewRomaji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/romaji"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

</LinearLayout>

